--- a/Practicas480/Practicas480.csproj
+++ b/Practicas480/Practicas480.csproj
@@ -114,6 +114,8 @@
     <Content Include="paginas\ConjeturaCollatz.html" />
     <Content Include="paginas\Inicio.html" />
     <Content Include="paginas\TablaMultiplicar.html" />
+    <Content Include="paginas\ValidacionISBN.html" />
+    <Content Include="paginas\ValidarCodigoEAN.html" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Web.config" />
