--- a/Practicas480/Practicas480.csproj
+++ b/Practicas480/Practicas480.csproj
@@ -108,7 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="js\JavaScript.js" />
-    <Content Include="PaginasJavaScript\AnilizarCadenaNumeros.html" />
+    <Content Include="PaginasJavaScript\AnalizarCadenaNumeros.html" />
     <Content Include="PaginasJavaScript\AsociarEventosDinamicamente.html" />
     <Content Include="PaginasJavaScript\CambiarImagenesRadios.html" />
     <Content Include="PaginasJavaScript\CrearTablaMultiplicar.html" />
