--- a/Practicas480/Practicas480.csproj
+++ b/Practicas480/Practicas480.csproj
@@ -134,21 +134,21 @@
     <Content Include="PaginasJavaScript\AsociarEventosDinamicamente.html" />
     <Content Include="PaginasJavaScript\CambiarImagenesRadios.html" />
     <Content Include="PaginasJavaScript\CrearTablaMultiplicar.html" />
-    <Content Include="PaginasJavaScript\EventosAccesoControles.html" />
+    <Content Include="PaginasJavaScript\01EventosAccesoControles.html" />
     <Content Include="PaginasJavaScript\Reloj.html" />
     <Content Include="PaginasJavaScript\RotarImagen.html" />
     <Content Include="PaginasJavaScript\SeleccionarDeporte.html" />
-    <Content Include="PaginasJavaScript\Sentencias.html" />
-    <Content Include="PaginasJavaScript\CalcularLetraDNI.html" />
-    <Content Include="PaginasJavaScript\DiaNacimientoSemana.html" />
-    <Content Include="PaginasJavaScript\ConjeturaCollatz.html" />
+    <Content Include="PaginasJavaScript\02Sentencias.html" />
+    <Content Include="PaginasJavaScript\03CalcularLetraDNI.html" />
+    <Content Include="PaginasJavaScript\04DiaNacimientoSemana.html" />
+    <Content Include="PaginasJavaScript\05ConjeturaCollatz.html" />
     <Content Include="PaginasJavaScript\Inicio.html" />
     <Content Include="PaginasJavaScript\SumarNumerosAletorios.html" />
     <Content Include="PaginasJavaScript\SumarNumerosEnlazados.html" />
-    <Content Include="PaginasJavaScript\TablaMultiplicar.html" />
-    <Content Include="PaginasJavaScript\ValidacionISBN.html" />
-    <Content Include="PaginasJavaScript\ValidarCodigoEAN.html" />
-    <Content Include="PaginasJavaScript\ValidarEmail.html" />
+    <Content Include="PaginasJavaScript\06TablaMultiplicar.html" />
+    <Content Include="PaginasJavaScript\07ValidacionISBN.html" />
+    <Content Include="PaginasJavaScript\08ValidarCodigoEAN.html" />
+    <Content Include="PaginasJavaScript\09ValidarEmail.html" />
     <Content Include="PaginasJQuery\BuscarEmpleados.html" />
     <Content Include="PaginasJQuery\BuscarJSON.html" />
     <Content Include="PaginasJQuery\Checkbox.html" />
