--- a/Practicas480/Practicas480.csproj
+++ b/Practicas480/Practicas480.csproj
@@ -99,6 +99,13 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Images\tux_jedi.jpg" />
+    <Content Include="Images\tux_joker.png" />
+    <Content Include="Images\tux_logan.png" />
+    <Content Include="Images\tux_mario.png" />
+    <Content Include="Images\tux_rambo.png" />
+    <Content Include="Images\tux_screen.png" />
+    <Content Include="Images\tux_zombie.png" />
     <Content Include="js\jquery-3.1.1.min.js" />
     <Content Include="packages.config" />
     <Content Include="ApplicationInsights.config">
@@ -131,20 +138,20 @@
   <ItemGroup>
     <Content Include="js\JavaScript.js" />
     <Content Include="PaginasJavaScript\10AnalizarCadenaNumeros.html" />
-    <Content Include="PaginasJavaScript\AsociarEventosDinamicamente.html" />
-    <Content Include="PaginasJavaScript\CambiarImagenesRadios.html" />
+    <Content Include="PaginasJavaScript\11AsociarEventosDinamicamente.html" />
+    <Content Include="PaginasJavaScript\12CambiarImagenesRadios.html" />
     <Content Include="PaginasJavaScript\CrearTablaMultiplicar.html" />
     <Content Include="PaginasJavaScript\01EventosAccesoControles.html" />
     <Content Include="PaginasJavaScript\Reloj.html" />
     <Content Include="PaginasJavaScript\RotarImagen.html" />
-    <Content Include="PaginasJavaScript\SeleccionarDeporte.html" />
+    <Content Include="PaginasJavaScript\13SeleccionarDeporte.html" />
     <Content Include="PaginasJavaScript\02Sentencias.html" />
     <Content Include="PaginasJavaScript\03CalcularLetraDNI.html" />
     <Content Include="PaginasJavaScript\04DiaNacimientoSemana.html" />
     <Content Include="PaginasJavaScript\05ConjeturaCollatz.html" />
     <Content Include="PaginasJavaScript\Inicio.html" />
-    <Content Include="PaginasJavaScript\SumarNumerosAletorios.html" />
-    <Content Include="PaginasJavaScript\SumarNumerosEnlazados.html" />
+    <Content Include="PaginasJavaScript\14SumarNumerosAletorios.html" />
+    <Content Include="PaginasJavaScript\15SumarNumerosEnlazados.html" />
     <Content Include="PaginasJavaScript\06TablaMultiplicar.html" />
     <Content Include="PaginasJavaScript\07ValidacionISBN.html" />
     <Content Include="PaginasJavaScript\08ValidarCodigoEAN.html" />
