--- a/Practicas480/Practicas480.csproj
+++ b/Practicas480/Practicas480.csproj
@@ -119,6 +119,19 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="PaginasJQuery\15BotonesDinamicos.html" />
+    <Content Include="PaginasJQuery\06CambiarAtributosDinamicamente.html" />
+    <Content Include="PaginasJQuery\14CrearNuevoElemento.html" />
+    <Content Include="PaginasJQuery\13DeporteFavorito.html" />
+    <Content Include="PaginasJQuery\11EachRadios.html" />
+    <Content Include="PaginasJQuery\12FormulaIngredientes.html" />
+    <Content Include="PaginasJQuery\16ImagenesRango.html" />
+    <Content Include="PaginasJQuery\09ObjetosDinamicos.html" />
+    <Content Include="PaginasJQuery\18PrototipoCoches.html" />
+    <Content Include="PaginasJQuery\17PrototipoNumeros.html" />
+    <Content Include="PaginasJQuery\07SumarNumeros.html" />
+    <Content Include="PaginasJQuery\08TablaMultiplicar.html" />
+    <Content Include="PaginasJQuery\10TablaMultiplicar2.html" />
     <Content Include="scripts\bootstrap.js" />
     <Content Include="scripts\bootstrap.min.js" />
     <None Include="scripts\jquery-3.1.1.intellisense.js" />
@@ -156,11 +169,11 @@
     <Content Include="PaginasJavaScript\07ValidacionISBN.html" />
     <Content Include="PaginasJavaScript\08ValidarCodigoEAN.html" />
     <Content Include="PaginasJavaScript\09ValidarEmail.html" />
-    <Content Include="PaginasJQuery\BuscarEmpleados.html" />
-    <Content Include="PaginasJQuery\BuscarJSON.html" />
-    <Content Include="PaginasJQuery\Checkbox.html" />
-    <Content Include="PaginasJQuery\LeerJSON.html" />
-    <Content Include="PaginasJQuery\TiendaDeProductos.html" />
+    <Content Include="PaginasJQuery\03BuscarEmpleados.html" />
+    <Content Include="PaginasJQuery\05BuscarJSON.html" />
+    <Content Include="PaginasJQuery\01Checkbox.html" />
+    <Content Include="PaginasJQuery\04LeerJSON.html" />
+    <Content Include="PaginasJQuery\02TiendaProductos.html" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Web.config" />
